# PlotJuggler

./: CMakeLists.txt  Dockerfile  InstallMacOS.md  package.xml
.github/workflows/: codeql.yml  ubuntu.yaml
cmake/: Config.cmake.in
plotjuggler_app/: CMakeLists.txt  curvelist_panel.cpp  curvelist_view.cpp  customtracker.cpp  main.cpp  mainwindow.cpp  nlohmann_parsers.h  plot_docker.cpp  plot_docker_toolbar.cpp  plot_docker_toolbar.h  plotwidget.cpp  plotwidget_editor.cpp  plotwidget_editor.h  plotwidget_transforms.cpp  tabbedplotwidget.cpp
plotjuggler_app/transforms/: function_editor.cpp
plotjuggler_base/src/: plotlegend.cpp  plotmagnifier.cpp  plotwidget_base.cpp  plotzoomer.cpp
plotjuggler_plugins/DataLoadCSV/: CMakeLists.txt  dataload_csv.cpp
plotjuggler_plugins/DataLoadMCAP/: CMakeLists.txt  dialog_mcap.cpp
plotjuggler_plugins/DataLoadParquet/: CMakeLists.txt
plotjuggler_plugins/DataLoadULog/: CMakeLists.txt
plotjuggler_plugins/DataStreamMQTT/: CMakeLists.txt  datastream_mqtt.cpp
plotjuggler_plugins/DataStreamSample/: CMakeLists.txt
plotjuggler_plugins/DataStreamUDP/: CMakeLists.txt  udp_server.cpp
plotjuggler_plugins/DataStreamWebsocket/: CMakeLists.txt  websocket_server.cpp
plotjuggler_plugins/DataStreamZMQ/: CMakeLists.txt  datastream_zmq.cpp
plotjuggler_plugins/ParserDataTamer/: CMakeLists.txt
plotjuggler_plugins/ParserIDL/: CMakeLists.txt
plotjuggler_plugins/ParserLineInflux/: CMakeLists.txt  line_parser.cpp
plotjuggler_plugins/ParserProtobuf/: CMakeLists.txt  error_collectors.cpp  error_collectors.h  protobuf_factory.cpp
plotjuggler_plugins/ParserROS/: CMakeLists.txt
plotjuggler_plugins/PluginsZcm/: CMakeLists.txt
plotjuggler_plugins/StatePublisherCSV/: CMakeLists.txt
plotjuggler_plugins/ToolboxFFT/: CMakeLists.txt  toolbox_FFT.cpp
plotjuggler_plugins/ToolboxLuaEditor/: CMakeLists.txt  lua_editor.cpp
plotjuggler_plugins/ToolboxQuaternion/: CMakeLists.txt  toolbox_quaternion.cpp
plotjuggler_plugins/VideoViewer/: CMakeLists.txt
plotjuggler_plugins/VideoViewer/cmake/: FindQtAV.cmake
plotjuggler_plugins/ZcmUtils/: CMakeLists.txt
snap_core22/: snapcraft.yaml
